<resources>
    <string name="app_name">Quick Math</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Back</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="quick_maths_text">Quick Maths</string>
    <string name="button_easy_text">easy</string>
    <string name="button_med_text">Medium</string>
    <string name="button_hard_text">Hard</string>
    <string name="button_1_text">1</string>
    <string name="button_2_text">2</string>
    <string name="button_3_text">3</string>
    <string name="button_4_text">4</string>
    <string name="button_5_text">5</string>
    <string name="button_6_text">6</string>
    <string name="button_7_text">7</string>
    <string name="button_8_text">8</string>
    <string name="button_9_text">9</string>
    <string name="button_del_text">delete</string>
    <string name="button_0_text">0</string>
    <string name="button_enter_text">enter</string>
    <string name="button_go_text">GO!</string>
    <string name="score_text">Score: %d</string>
    <string name="button_minus_text">(-)</string>
    <string name="problem_text">%d %s %d = __</string>
    <string name="settings_text">Enter a max number (up tp 300) to be generated</string>
    <string name="_300"><![CDATA[<300]]></string>
    <string name="submit_text">Submit</string>
    <string name="settings_desc">Settings</string>
    <string name="default_hint">Default is 20</string>
    <string name="max_text">Max Number:</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="high_scores_text">High Scores:</string>
    <string name="button_home_text">Home</string>
    <string name="button_text_play_again">Play Again</string>
    <string name="highscore_1">1: %d</string>
    <string name="highscore_2">2: %d</string>
    <string name="highscore_3">3: %d</string>
    <string name="highscore_4">4: %d</string>
    <string name="highscore_5">5: %d</string>
    <string name="mult_streak_text">X %s</string>
    <string name="x2">X2</string>
    <string name="x5">X5</string>
    <string name="x10">X10</string>
    <string name="go">GO!</string>
    <string name="image_content_text">highscore button</string>
</resources>