<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:background="@color/primaryBackground">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_maths_text"
        android:textColor="@color/primaryText"
        android:shadowColor="@color/shadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/button_easy"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:text="@string/button_easy_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintVertical_bias=".25" />

    <Button
        android:id="@+id/button_med"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/button_med_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_easy" />

    <Button
        android:id="@+id/button_hard"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/button_hard_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_med" />
</androidx.constraintlayout.widget.ConstraintLayout>